--- a/packages/accounts-ui/login_buttons.less
+++ b/packages/accounts-ui/login_buttons.less
@@ -17,10 +17,8 @@
 // Browser support is IE 8+ and all modern browsers, with the caveat
 // that `-moz-box-sizing` in Firefox is considered to have some
 // buggy or non-compliant behavior.  For example, min/max-width/height
-// may not interact correctly.  Box-sizing is thus not a feature to
-// base a major layout system around.
-//
-// See https://bugzilla.mozilla.org/show_bug.cgi?id=243412.
+// may not interact correctly. See
+// https://bugzilla.mozilla.org/show_bug.cgi?id=243412.
 .box-sizing-by-border () {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -39,7 +37,7 @@
 .display-inline-block () {
   display: inline-block;
 
-  // IE 7 hacks:
+  // IE 7 hacks (disabled)
   //*display: inline;
   //*zoom: 1;
 }
