Stop accounts-ui <input> CSS from leaking to whole app

--- a/packages/accounts-ui/login_buttons.less
+++ b/packages/accounts-ui/login_buttons.less
@@ -415,9 +415,11 @@
   background-color: rgba(0, 0, 0, 0.7);
 }
 
-input[type=text], input[type=email], input[type=password] {
-  padding: 4px;
-  border: 1px solid #999;
-  border-radius: 3px;
-  line-height: 1;
+#login-buttons, .accounts-dialog {
+  input[type=text], input[type=email], input[type=password] {
+    padding: 4px;
+    border: 1px solid #999;
+    border-radius: 3px;
+    line-height: 1;
+  }
 }
